Final Push Simanjorang

--- a/views/shared/dash_layout.ejs
+++ b/views/shared/dash_layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TESTESTES</title>
+    <title>Layout</title>
     
     <link rel="icon" type="image/x-icon" href="~/asset/favicon.ico">
 
@@ -32,21 +32,21 @@
             <header class="header navbar navbar-expand-sm expand-header">
                 <div class="header-left d-flex">
                     <div class="logo">
-                        DevEngine
+                        Ticket Dashboard
                     </div>
                     <a href="#" class="sidebarCollapse" id="toggleSidebar" data-placement="bottom">
                         <span class="fas fa-bars"></span>
                     </a>
                 </div>
                 <ul class="navbar-item flex-row ml-auto">
-                    <li class="nav-item dropdown user-profile-dropdown">
+                    <!-- <li class="nav-item dropdown user-profile-dropdown">
                         <a href="#" class="nav-link user" id="notifyDropdown" data-bs-toggle="dropdown">
                             <span class="fas fa-bell"></span>
                             <p class="count">5</p>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end animated-dropdown notifications-menu" aria-labelledby="notifyDropdown" data-bs-auto-close="false">
 
-                            <!-- Users Notifications -->
+                            
                             <li class="dropdown-item dropdown-toggle d-flex align-items-center" data-bs-toggle="collapse" data-bs-target="#userNotifications">
                                 <div class="col-2 d-flex align-items-center justify-content-center text-center">
                                     <span class="fas fa-user"></span>
@@ -64,7 +64,7 @@
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                     
-                            <!-- Selling Notifications -->
+                            
                             <li class="dropdown-item dropdown-toggle d-flex align-items-center" data-bs-toggle="collapse" data-bs-target="#sellingNotifications">
                                 <div class="col-2 d-flex align-items-center justify-content-center text-center">
                                     <span class="fas fa-shopping-cart"></span> 
@@ -81,7 +81,7 @@
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                     
-                            <!-- New Products Notifications -->
+                            
                             <li class="dropdown-item dropdown-toggle d-flex align-items-center" data-bs-toggle="collapse" data-bs-target="#productNotifications">
                                 <div class="col-2 d-flex align-items-center justify-content-center text-center">
                                     <span class="fas fa-box"></span>    
@@ -97,13 +97,13 @@
                                 <li class="dropdown-item"><span class="fas fa-laptop"></span> <strong>Gaming Laptop</strong> now available</li>
                             </ul>
                     
-                            <!-- Divider -->
+                            
                             <li><hr class="dropdown-divider"></li>
                     
-                            <!-- View All Notifications -->
+                            
                             <li><a class="dropdown-item text-center fw-bold" href="#" style="font-size: 12px;">View All Notifications . . .</a></li>
                         </ul>
-                    </li>
+                    </li> -->
                     
                     <li class="nav-item dropdown user-profile-dropdown">
                         <a href="#" class="nav-link user" id="userDropdown" data-bs-toggle="dropdown">
